--- a/Css/style.css
+++ b/Css/style.css
@@ -69,12 +69,14 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
-
+section{
+    margin-top: 130px;
+}
 /* about section styles */
 
 
 .about{
-    margin-top: 130px;
+  
     background-color: #FFF8F3;
     border-radius: 10px;
     padding: 130px 150px;
@@ -82,10 +84,10 @@ main{
 
 }
 .section-title{
-    
-    margin-bottom: 30px;
+    text-align: center;
+    margin-bottom: 50px;
     font-size: 35px;
-    font-weight: 30px;
+    font-weight: 700px;
 }
 .section-description{
     color: #757575;
@@ -105,4 +107,89 @@ main{
     font-weight: 700;
     font-size: 20px;
     color: #474747;
+}
+
+
+/*What i DO section  */
+
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    background-color: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.skill-description{
+    color: #757575;
+
+}
+
+/* Resume styles */
+
+.resume-content{
+    display: flex;
+    gap: 24px;
+}
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.resume .title{
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 10px;
+    
+}
+.resume .sub-title{
+    color: #757575;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
+
+}
+
+
+.resume .description{
+    color: #757575;
+
+}
+.resume-button{
+    margin-top: 50px;
+    text-align: center;
+}
+
+/* contact styles */
+
+.contact{
+    display: flex;
+    gap: 100px;
+    background: #FFF8F3;
+    padding: 130px 200px;
+}
+.contact .section-title{
+    text-align: left;
+}
+
+.contact input[type="text"], input[type="email"], textarea{
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding: 18px 30px;
+}
+input{
+    height: 64px;
+}
+
+.contact a{
+    text-decoration: none;
 }
